Add hero and design it

--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <header>
-        <a href="#" class="logo">Header Logo</a>
-        <nav>
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </nav>
-    </header>    
+    <div class="wrapper">
+        <header>
+            <a href="#" class="logo">Header Logo</a>
+            <nav>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="hero">
+            <div>
+                <div class="main-text">This website is awesome</div>
+                <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button><a href="#">Sign up</a></button>
+            </div>
+            <img src="https://picsum.photos/id/135/400/200?grayscale" alt="grayscale close-up photo of a body of water">
+            
+        </div>
+    </div>  
 </body>
 </html>
