Add information and 4 flex items for images with subtext

--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
             <img src="https://picsum.photos/id/135/400/200?grayscale" alt="grayscale close-up photo of a body of water">
             
         </div>
-    </div>  
+    </div>
+    <div class="information">Some random information.</div>
+    <div class="container">
+        <div class="item">
+            <div></div>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="item">
+            <div></div>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="item">
+            <div></div>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="item">
+            <div></div>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+    </div>
 </body>
 </html>
