--- a/index.html
+++ b/index.html
@@ -48,5 +48,14 @@
             <p>This is some subtext under an illustration or image</p>
         </div>
     </div>
+    <div class="quote-container">
+        <div class="quote">
+            This is an inspiring quote, or a testimonial from a customer. 
+            Maybe it's just filling up space, or maybe people will actually 
+            read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="signature">-Thor, God of Thunder</div>
+        
+    </div>
 </body>
 </html>
