Add call to action window

--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
             read it. Who knows? All I know is that it looks nice.
         </div>
         <div class="signature">-Thor, God of Thunder</div>
-        
+    </div>
+    <div class="sign-up-container">
+        <div>
+            <div class="sign-up-headline">Call to action! It's time!</div>
+            <div class="sign-up-information">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="sign-up-button"><a href="#">sign up</a></button>
     </div>
 </body>
 </html>
