--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
         </div>
         <button class="sign-up-button"><a href="#">sign up</a></button>
     </div>
+    <footer>Copyright ©  The Odin Project 2022</footer>
 </body>
 </html>
